--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "vb",
   "version": "0.0.1",
   "dependencies": {
-    "co": "*",
+    "co": "4.6.0",
     "co-views": "~0.1.0",
-    "co-wechat": "*",
+    "co-wechat": "0.0.4",
     "koa": "~0.2.0",
     "koa-body": "^1.2.1",
     "koa-generic-session": "^1.9.0",
@@ -25,7 +25,7 @@
     "base-settings": "git+https://henryleu:c148960791ab761064ecfbb07b7fdf582ff008df@github.com:trillers/base-settings.git"
   },
   "devDependencies": {
-    "mocha": "*",
-    "chai": "*"
+    "mocha": "2.1.0",
+    "chai": "3.3.0"
   }
 }
